# PyBehaviorLog

./: .codacy.yml  .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  bandit-report.json  docker-compose.yml  entrypoint.sh  plan.md  pyproject.toml  requirements-dealhost.txt  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bandit.yml  ci.yml  codacy.yml  codeql.yml  ossar.yml  osv-scanner.yml  release-drafter.yml  renovate.yml
config/: settings.py
deploy/: dealhost.env.example  dealhost.manifest.json
docs/: architecture.md  certification.md  compatibility.md  compatibility_matrix.md  dealhost.md  deployment.md  fao_translation_review.md  native_boris_matrix.md  roadmap.md
static/tracker/: app.css
templates/: base.html
templates/registration/: login.html  signup.html
templates/tracker/: behavior_form.html  category_form.html  delete_confirm.html  ethogram_import.html  home.html  independent_variable_form.html  keyboard_profile_form.html  modifier_form.html  observation_template_form.html  project_analytics.html  project_boris_import.html  project_clone_form.html  project_detail.html  project_form.html  project_import_create.html  project_membership_form.html  project_settings.html  (+8 more)
tracker/: admin.py  compatibility.py  dealhost.py  forms.py  models.py  urls.py  views.py
(+29 files in other folders)
