[project]
name = "pybehaviorlog"
version = "0.9.5"
requires-python = ">=3.13"
dependencies = [
  "Django[argon2]==6.0.6",
  "granian==2.7.7",
  "openpyxl==3.1.5",
  "psycopg[binary,pool]==3.3.4",
  "redis[hiredis]==8.0.0",
]

[dependency-groups]
dev = [
  "coverage[toml]>=7.14.2,<8",
  "pre-commit>=4.6.0,<5",
  "ruff>=0.15.18,<1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
  "migrations",
  "media",
  "staticfiles",
  ".venv",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF", "SIM", "C4"]
ignore = [
  "E501",
  # Django model/form Meta inner classes use mutable class attributes intentionally.
  "RUF012",
  # Existing code patterns intentionally trade strictness for readability in this project.
  "RUF005",
  "RUF010",
  "RUF046",
  "C416",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.coverage.run]
branch = true
source = ["tracker"]
omit = [
  "*/migrations/*",
  "tracker/admin.py",
]

[tool.coverage.report]
fail_under = 81
show_missing = true
skip_covered = false
